# cert-gen

./: .gitignore  Cargo.toml  README.md  data.csv  demo.csv
certs/demo/: config.toml
src/: certificate_config.rs  certificate_data.rs  main.rs
